--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <nav>
         <div class="nav-logo">
             <a href="#">
-                <img class="img-logo" src="img/new3.png" style="border-radius: 50px; ">
+                <img class="img-logo" src="new3.png" style="border-radius: 50px; ">
             </a>
         </div>
 
@@ -37,7 +37,7 @@
             <button class="btn"> Get Started</button>
         </div>
         <div class="image">
-            <img src="img/main.png" style="width: 100%;">
+            <img src="main.png" style="width: 100%;">
         </div>
     </header>
 
